fixing some spacing issues

--- a/client/components/main/style.scss
+++ b/client/components/main/style.scss
@@ -2,7 +2,7 @@
 	margin: auto;
 	max-width: 100%;
 	z-index: z-index( 'root', '.main' );
-	padding-top: 56px;
+	padding-top: 51px;
 
 	// Themes is a great example of using all this new space ;)
 	&.themes,
